--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -57,4 +57,9 @@
     <string name="taskstatus_in_progress">In progress</string>
     <string name="taskstatus_test">Test</string>
     <string name="taskstatus_done">Done</string>
+    <string name="create_new_task">Create new task</string>
+    <string name="task_status_label">Status</string>
+    <string name="create_new_task_sucess">Task created with success</string>
+    <string name="create_at_label">Created</string>
+    <string name="updated_at_label">Updated:</string>
 </resources>
