feat: Adicionada a ação de delete da tarefa

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,4 +62,6 @@
     <string name="create_new_task_sucess">Task created with success</string>
     <string name="create_at_label">Created</string>
     <string name="updated_at_label">Updated:</string>
+    <string name="delete_task_success">Task deleted with success</string>
+    <string name="delete_task">Delete task</string>
 </resources>
