--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -63,4 +63,6 @@
     <string name="create_new_task_sucess">Atividade criada com sucesso</string>
     <string name="create_at_label">Criado</string>
     <string name="updated_at_label">Atualizado</string>
+    <string name="delete_task_success">Tarefa excluída com sucesso</string>
+    <string name="delete_task">Apagar tarefa</string>
 </resources>
