--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="updated_at_label">Updated:</string>
     <string name="delete_task">Delete task</string>
     <string name="delete_task_success">Task deleted with success</string>
+    <string name="error_delete_project">There are still tasks associated with the project</string>
     <string-array name="task_status_array">
         <item>@string/taskstatus_backlog</item>
         <item>@string/taskstatus_to_do</item>
