--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -64,4 +64,5 @@
     <string name="updated_at_label">Updated:</string>
     <string name="delete_task_success">Task deleted with success</string>
     <string name="delete_task">Delete task</string>
+    <string name="error_delete_project">There are still tasks associated with the project</string>
 </resources>
